<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".EditHotel">

    <TextView
        android:id="@+id/editPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:text="@string/edit_hotel_details"
        android:textAlignment="center"
        android:textColor="#4A00FF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edithotelname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text="@string/hotel_name"
        android:textColor="#757575"
        android:textSize="14sp"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text="@string/registartion_number"
        android:textColor="#757575"
        android:textSize="14sp"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="Edit contact number"
        android:inputType="@string/contact_number"
        android:padding="10dp"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="edit email address"
        android:inputType="@string/email_address"
        android:padding="10dp"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="05dp"
        android:padding="10dp"
        android:text="@string/edit"
        android:textSize="16sp" />

    <Button
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="05dp"
        android:padding="10dp"
        android:text="@string/delete"
        android:textSize="16sp" />

    <Button
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="05dp"
        android:padding="10dp"
        android:text="@string/search" />
</LinearLayout>