<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/creupdate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateHotel">

    <TextView
        android:id="@+id/createtopic"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_margin="15dp"
        android:paddingStart="10dp"
        android:text="@string/create_hotel_details"
        android:textAlignment="center"
        android:textColor="#4A00FF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/crehotelname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/hotel_name"
        android:textColor="#7E9797"
        android:textSize="14sp"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/creregistarteno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/registartion_number"
        android:textColor="#7E9797"
        android:textSize="14sp"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/crephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="Contact number"
        android:inputType="@string/contact_number"
        android:textSize="14sp"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/creaemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="Email address"
        android:inputType="@string/email_address"
        android:textSize="14sp"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/createsubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:text="@string/submit_correct"
        android:textSize="16sp" />

    <Button
        android:id="@+id/creaupdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:text="@string/upadate_details"
        android:textSize="16sp" />

</LinearLayout>