<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Home">

    <TextView
        android:id="@+id/appname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:padding="20dp"
        android:text="@string/funny_days_travel_plans"
        android:textAlignment="center"
        android:textColor="#004AFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/viewprofilehome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginBottom="05dp"
        android:padding="15dp"
        android:text="@string/view_profile"
        android:textSize="20sp" />

    <Button
        android:id="@+id/searchplaceshome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginBottom="05dp"
        android:padding="15dp"
        android:text="@string/search_places"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bookhotelhome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginBottom="05dp"
        android:padding="15dp"
        android:text="@string/book_hotel"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bookvehiclehome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginBottom="05dp"
        android:padding="15dp"
        android:text="@string/book_vehicles"
        android:textSize="20sp" />
</LinearLayout>